Updated workflows, Added favicon(very important), updated readmes